# thought-v-response

./: .gitignore  CITATION.cff  LICENSE  METHOD.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
examples/: demo.py
mcp/: server.py
tests/: test_evidence.py
thought_v_response/: __init__.py  evidence.py
